# dbt-workshop

./: .pre-commit-config.yaml  .sqlfluff  Dockerfile  README.md  dbt_project.yml  dbt_workshop.duckdb  package-lock.yml  packages.yml  profiles_template.yml  pyproject.toml  sample_data.duckdb
.devcontainer/: Dockerfile
macros/: cents_to_dollars.sql
models/analysis/: analysis.yml  customers.sql  exposures.yml  orders.sql  test_customers.yml
models/incremental/: orders_per_year.sql  stg_orders_incr.sql
models/sources/: sources.yml
models/staging/: staging.yml
sample_data/: create.sql
tests/unit_tests/: test_customers.sql
