[tool.poetry]
name = "dbt-workshop"
version = "0.1.0"
description = ""
authors = ["Matthias Niehoff <matthias.niehoff@codecentric.de>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
dbt-bigquery = "^1.8"
dbt-postgres = "^1.8"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
data-diff = {version = "^0.11", extras=["postgres"]}
elementary-data = "^0.15"
pre-commit = "^3.8"
sqlfluff = "^3.1"
sqlfluff-templater-dbt = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
