[project]
name = "dbt-workshop"
version = "0.1.0"
description = ""
authors = [
    { name = "Matthias Niehoff", email = "matthias.niehoff@codecentric.de" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dbt-duckdb>=1.9,<2.0",
    "dbt-core>=1.10,<2.0",
    "duckdb>=1.3"
]

[project.optional-dependencies]
dev = [
    "elementary-data>=0.19,<0.20",
    "pre-commit>=4.3,<5.0",
    "sqlfluff>=3.4.2,<4.0",
    "sqlfluff-templater-dbt>=3.4.2,<4.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
